# Weekly-Strava-Stats-in-Slack

./: .env.example  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/weekly_strava_stats/cli/: commands.py
src/weekly_strava_stats/data/: quote_prompts.csv  quotes.txt
src/weekly_strava_stats/slack/: __init__.py  slack_channel_connector.py
src/weekly_strava_stats/storage/: __init__.py  week_stats.py  week_stats_storage.py
src/weekly_strava_stats/strava/: __init__.py  strava_connector.py
src/weekly_strava_stats/utils/: __init__.py  app_data.py  logging_utils.py  message_builder.py
