[tool.poetry]
name = "weekly-strava-stats"
version = "0.1.0"
description = "A CLI tool to fetch and post weekly Strava stats to Slack"
authors = ["Fabian Leinen <fabian.leinen@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
python-dotenv = "^1.0.1"
slack-bolt = "^1.21.2"
appdirs = "^1.4.4"
click = "^8.1.7"

[tool.poetry.dev-dependencies]
flake8 = "^6.1.0"

[tool.poetry.scripts]
weekly-strava-stats = "weekly_strava_stats.cli.commands:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
